# mini-desk-tool

./: .editorconfig  .gitignore  OPTIMIZATION_ROADMAP.md  README.md  README.zh-CN.md  index.html  main.js  package-lock.json  package.json  playwright.config.js  preload.js  script.js  styles.css  vite.config.js
.codex/environments/: environment.toml
electron/: main.js  preload.js
scripts/: check-release.js  generate-update-manifest.js  run-tauri.js
src/: desktop-panel.js  index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/features/desktop-panel/: app.js  dialogs.js  drag-drop.js  icons.js  keyboard-shortcuts.js  model.js  render.js  window-shell.js
tests/: app.spec.js
tests/helpers/: mockDesktopPanel.js
