[package]
name = "app"
version = "1.2.3"
description = "Desktop floating panel built with Tauri"
authors = ["Codex Local Refactor"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
rfd = "0.17.2"
reqwest = "0.13.2"
regex = "1.12.3"
scraper = "0.26.0"
base64 = "0.22.1"
opener = "0.8.4"
dirs = "6.0.0"
urlencoding = "2.1.3"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
